criação do css e finalização do projeto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="menu-content">
       <h1 class="logo">AcademiaInfinity</h1>
       <nav class="header-menu">
-        <ul>
+        <ul class="list-itens">
           <li><a href="#">home</a></li>
           <li><a href="#">serviços</a></li>
           <li><a href="#">aulas</a></li>
@@ -31,7 +31,7 @@
   <main>
     <div class="main-content">
       <h1 class="primary-text">
-        Malhar não fca mais fácil, você que fica melhor
+        Malhar não fca mais fácil, você que fica melhor!
       </h1>
       <h2 class="second-text">
         SE INSCREVA AGORA E MUDE DE VIDA
